[package]
name = "offline-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chia-wallet-sdk = { path = "../wallet-sdk" }
clvmr = "0.4.0"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.16", features = ["derive"] }
bech32 = "0.9.1"
hex = "0.4.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
home = "0.5.9"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
chia-bls = "0.4.0"
chia-wallet = "0.4.0"
bip39 = "2.0.0"
chia-protocol = "0.4.0"
clvm-traits = "0.3.3"
chia-client = "0.4.0"
colored = "2.1.0"
